[project]
name = "kit-api"
version = "0.1.0"
description = "Клиент для работы с Kit Vending API (api2.kit-invest.ru)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["kit", "vending", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp>=3.13.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "tzdata>=2025.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.13.3",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/kit-api"
Documentation = "https://github.com/yourusername/kit-api#readme"
Repository = "https://github.com/yourusername/kit-api"
Issues = "https://github.com/yourusername/kit-api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kit_api"]
exclude = [
    "/tests",
    "/tests/*",
    "/__test__.py",
]

[tool.black]
line-length = 100
target-version = ['py314']

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v"
